--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 200px;
+  height: 100px;
   background: #31e1e7;
   display: flex;
   justify-content: center;
@@ -8,21 +8,24 @@
   flex-direction: column;
   padding-top: 10px;
   margin-top: 200px;
+  margin-bottom: 5px;
+  font-weight: 900;
 }
 
 .socialMedia svg {
-  color: white;
-  margin: 20px;
+  color: rgb(105, 23, 23);
+  margin: 5px;
   font-size: 70px;
   cursor: pointer;
 }
 
 .footer p {
-  color: white;
+  color: rgb(105, 23, 23);
+  margin-top: 5px;
 }
 
 @media only screen and (max-width: 600px) {
   .footer svg {
-    font-size: 50px;
+    font-size: 70px;
   }
 }
