--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,7 +19,7 @@
   margin-right: 20px;
   background-color: transparent;
   border: none;
-  color: white;
+  color: rgb(105, 23, 23);
   cursor: pointer;
 }
 
