--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,6 +4,22 @@
   background: #31e1e7;
 }
 
+.links {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(105, 23, 23);
+}
+
+.navbar a {
+  color: rgb(105, 23, 23);
+  text-decoration: none;
+  margin: 20px;
+  font-size: 25px;
+}
+
 .toggleButton {
   width: 100%;
   height: 100px;
@@ -27,7 +43,46 @@
   height: 100vh;
 }
 
+#open .links {
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 100px;
+}
+
 #open a {
   width: 100%;
   text-align: center;
+}
+
+@media only screen and (max-width: 900px) {
+  .navbar a {
+    width: 70px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .toggleButton {
+    display: flex;
+  }
+  #close a {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .toggleButton {
+    display: none;
+  }
+
+  .hiddenLinks {
+    display: none;
+  }
+
+  #open {
+    height: 100px;
+  }
+
+  #open .links {
+    flex-direction: row;
+  }
 }
